Fix detached RCFilters menu
In attempts to fix RCFilters menu overlap with other UI elements when
opening upwards, I1fe6b8b2c9 adds `z-index` rule to overlay element.
But as part of the same rule, `position: relative` is added which
cascades the absolute positioned overlay, causing it to appear in
natural flow of document, which causes menu positioning parameters
to render the menu detached from RCFilters.

Bug: T183442

--- a/skinStyles/ooui.less
+++ b/skinStyles/ooui.less
@@ -1,6 +1,9 @@
 .oo-ui-windowManager-modal,
-.skin-vector .mw-rcfilters-ui-overlay,
 .skin-vector .ve-ui-overlay-global {
 	z-index: 101;
 	position: relative;
+}
+
+.skin-vector .mw-rcfilters-ui-overlay {
+	z-index: 101;
 }
